--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
       <link data-trunk rel="rust" data-wasm-opt="z"/>
+      <link data-trunk rel="scss" href="style/main.scss" />
+      <link data-trunk rel="copy-dir" href="public/js/" />
   </head>
   <body></body>
 </html>
