--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <link data-trunk rel="rust" data-wasm-opt="z"/>
       <link data-trunk rel="scss" href="style/main.scss" />
       <link data-trunk rel="copy-dir" href="public/js/" />
+      <link data-trunk rel="copy-dir" href="public/assets/" />
   </head>
   <body></body>
 </html>
